--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -29,8 +29,8 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-en:
-  language: "English"
+nl:
+  language: "Nederlands"
   pages:
       about:
-        paragraph1: "Andrew Wright began the Wright Piano School in the Hague in 2009 as a private teaching practice. Due to increasing demand the Wright Piano School has grown to include several other expert teachers and a full calendar of activities, including guest masterclasses, recitals, exams and group classes."
+        paragraph1: "Andrew Wright DUTCH the Wright Piano School in the Hague in 2009 as a private teaching practice. Due to increasing demand the Wright Piano School has grown to include several other expert teachers and a full calendar of activities, including guest masterclasses, recitals, exams and group classes."
