--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -33,92 +33,92 @@ nl:
   language: "Nederlands"
   shared:
       navbar:
-        nav-item1: "About"
-        nav-item2: "Policy and Prices"
-        nav-item3: "Calendar"
-        nav-item4: "Teachers"
+        nav-item1: "Over ons"
+        nav-item2: "Voorwaarden"
+        nav-item3: "Agenda"
+        nav-item4: "Docenten"
         nav-item5: "Contact"
-        nav-item6: "Videos"
-        nav-item7: "Apply Now"
+        nav-item6: "Video's"
+        nav-item7: "Registreer voor een Proefles"
   pages:
       home:
         header: "Wright Piano School"
-        paragraph: "Learn from the best! The Hague, Rotterdam, Utrecht, Leiden, Amsterdam"
-        button: "Apply Now"
+        paragraph: "Leer van de best! The Hague, Rotterdam, Utrecht, Leiden, Amsterdam"
+        button: "Registreer voor een Proefles"
       about:
-        header1: "About Wright Piano School"
-        paragraph1: "Andrew Wright began the Wright Piano School in the Hague in 2009 as a private teaching practice. Due to increasing demand the Wright Piano School has grown to include several other expert teachers and a full calendar of activities, including guest masterclasses, recitals, exams and group classes."
-        paragraph2: "Students of Andrew Wright have gone on to be accepted to the most important conservatoires of the Netherlands (Amsterdam, Utrecht, the Hague) and have been successful in national and international competitions such as the Prinses Christina Concours, the Concertgebouw Concours and the Holland International Piano Competition. In November 2015, Nathan Schaumann (15-year-old student of Andrew Wright) won first prize in his age category in the Young Pianist Foundation Competition, the most important piano competition in Holland."
-        paragraph3_1: "The Wright Piano School places emphasis on inspiration, hard work and achievement. Some students are on their way to becoming professional musicians, while others simply play for fun. The teachers find ways to help all students advance through regular practice. Luckily, the many performances opportunities offered to students provide great motivation, as students are always practicing toward a performance. The sense of accomplishment from each recital, masterclass or exam performance keeps them working hard! All of the associate teachers at the Wright Piano School are highly qualified with a degree in piano and an affinity for teaching. Besides Andrew Wright, who holds a PhD from Leiden University, Sofia Skopou and Stefan Petrovic are also currently finishing PhD degrees in piano, a level of qualification not found among faculty in any other music schools in the Netherlands. The other associates all have degrees appropriate to their specialization within the school. Please check out the"
-        paragraph3_2: "for more information."
+        header1: "Over Wright Piano School"
+        paragraph1: "Andrew Wright heeft de Wright Piano School opgericht in 2009. De doel van het begin was de beste niveau van muzikale training te geven aan kinderen van alle niveau's. Daarom bieden we hoog gekwalificeerde docenten en een agenda met activiteiten zoals voorspeelavonden, examens, en gast masterclassen."
+        paragraph2: "Onze benadering van muziekeducatie komt uit eigen onderzoek, en de enorme succes daarvan is te zien in de resultaten van ons studenten. Studenten hebben toelating gekregen voor bachelor solo piano opleiding op conservatoria in Nederland en in het buitenland, en zijn zeer succesvol geweest in nationale en internationale concoursen inclusief, in Nederland, het Prinses Christina Concours, het Concertgebouw Concours, Holland International Piano Competition, en Steinway Concours. In 2015, Nathan Schauman (leerling van Andrew Wright) heeft de eerste prijs gewonnen bij de Young Pianist Foundation Competition, Category A. Hij was de enkel concoursante van buiten het conservatorium wereld."
+        paragraph3_1: "Wright Piano School legt de nadruk op inspiratie, hard werken en prestatie. Sommige studenten zijn op weg om professionele muzikanten te worden, terwijl anderen gewoon voor de lol spelen. In alle gevallen maakt het hebben van de beste docent een enorm verschil! De docenten vinden manieren om alle studenten te helpen en te inspireren tot regelmatig oefenen. Gelukkig bieden de vele uitvoeringsmogelijkheden die aan studenten worden geboden een grote motivatie, omdat studenten altijd oefenen in de richting van een uitvoering. Het gevoel van voldoening van elke recital, masterclass of examenprestatie zorgt ervoor dat ze hard blijven oefenen. Alle aangesloten docenten aan de Wright Piano School zijn hoog gekwalificeerd met een diploma in piano en affiniteit met lesgeven. Naast Andrew Wright, die is gepromoveerd aan de Universiteit Leiden, zijn Sofia Skopou en Stefan Petrovic momenteel ook bezig met het behalen van een doctoraat, een kwalificatieniveau dat niet wordt gevonden in andere muziekscholen of conservatoria in Nederland. De andere docenten hebben allemaal een diploma passend bij hun specialisatie binnen de school. Bekijk de "
+        paragraph3_2: "voor meer informatie."
 
-        header2: "Business Information"
-        paragraph4: "Address: Pasteurstraat 340, 2522RX Den Haag"
-        paragraph5: "Phone: +31639591941"
+        header2: "Zakelijk Informatie"
+        paragraph4: "Adres: Pasteurstraat 340, 2522RX Den Haag"
+        paragraph5: "Telefoon: +31639591941"
         paragraph6: "KvK: 37157300 Andrew Wright"
         paragraph7: "BTW: NL500119338B01"
 
-        header3: "Legal Structure"
-        paragraph8: "Wright Piano School is registered with the Kamer van Koophandel as an \"eenmanszaak\" under the name Andrew Wright. As such, the Wright Piano School refers students to its carefully-selected teachers, who work as independent freelancers. These teachers are legally responsible for their own actions. Wright Piano School performs all administrative functions with the students, including placement, billing, collection, organisation of activities, and periodic assessment."
+        header3: "Structuur"
+        paragraph8: "Wright Piano School is geregistreerd met de Kamer van Koophandel onder naam Andrew Wright. Docenten zijn freelance en verantwoordelijk voor zijn eigen lespraktijken. Alle administratieve verplichtingen zoals factureren worden gedaan door Wright Piano School."
       policy:
-        header: "Studio Policy - Piano Lessons"
-        paragraph: "Please examine the studio policy carefully. It includes prices, information about cancellations and make-up lessons, and many other details. Feel free to call us and ask if you have any questions!"
-        link: "Studio Policy 2018 - 2019"
+        header: "Prijzen en Voorwaarden - Piano Lessen"
+        paragraph: "De document met voorwaarden bevat informatie over prijzen, en andere belangrijke voorwaarden. Graag contact met ons opnemen met vragen of bijzondere situaties."
+        link: "Prijzen en Voorwarden 2019 - 2020"
       calendar:
-        header: "Calendar"
-        paragraph: "Please note that the calendar below is a standard calendar for the school. Individual teachers might deviate from the calendar, and will communicate this directly to their students, while still offering the correct number of teaching weeks. Refer to the Studio Policy for information about cancellations / rescheduling lessons."
-        link: "Wright Piano School Calendar - 2018-2019"
+        header: "Agenda en Vakanties"
+        paragraph: "Ons agenda geeft aan de lesweken voor de school jaar. Lees ons voorwaarden voor meer informatie over annulering en inhalen van lessen."
+        link: "Wright Piano School Agenda en Vakanties - 2019-2020"
       contact:
         header1: "Contact"
-        header2: "Locations/regions:"
+        header2: "Locaties/regio's:"
       videos:
-        header: "Videos of our Students"
-        paragraph1: "Nathan plays Liszt Concerto in E-flat with Noord Nederlands Orkest"
-        paragraph2: "Two students playing their own Coldplay mashup!"
-        paragraph3: "Nathan plays a Chopin-Godowsky Etude for Left Hand alone in Hamburg"
-        paragraph4: "Annie Li (7) plays at the Nieuwe Kerk (Den Haag)"
+        header: "Filmpjes van onze leerlingen"
+        paragraph1: "Nathan speelt Liszt Concerto Nr. 1 met Noord Nederlands Orkest"
+        paragraph2: "Twee leerlingen spelen zijn eigen geimproviseerd Coldplay mashup!"
+        paragraph3: "Nathan speelt Chopin-Godowsky Etude voor linker hand alleen in Hamburg"
+        paragraph4: "Annie Li (7) speelt in de Nieuwe Kerk (Den Haag)"
   teachers:
       index:
-        header: "Piano Teachers"
-        paragraph: "Please click on a teacher to display their full information!"
+        header: "Piano Docenten"
+        paragraph: "Click op een docent voor meer informatie"
       show:
-        button1: "Sign up for a free trial lesson!"
+        button1: "Registreer voor een gratis proefles!"
         button2: "Contact"
-        paragraph1: "Languages:"
-        paragraph2: "Location/region:"
-        header1: "Biography"
+        paragraph1: "Talen:"
+        paragraph2: "Locatie/regio:"
+        header1: "CV"
         link1: "Website Andrew Wright"
         link2: "Research abstract"
         link3: "PhD Dissertation"
         link4: "Edit Teacher Information"
-        modal-header1_1: "Send"
-        modal-header1_2: "a message!"
-        modal-paragraph1: "Please also feel free to call us at 0639591941"
-        modal-placeholder1: "Your name"
-        modal-placeholder2: "Your email address"
-        modal-placeholder3: "Your phone number (optional)"
-        modal-placeholder4: "Message"
-        modal-button: "Send Message"
+        modal-header1_1: "Stuur"
+        modal-header1_2: "een bericht!"
+        modal-paragraph1: "Wij zijn altijd aanwezig op 0639591941"
+        modal-placeholder1: "Uw name"
+        modal-placeholder2: "Uw email"
+        modal-placeholder3: "Uw telefoonnummer (niet verplicht)"
+        modal-placeholder4: "Bericht"
+        modal-button: "Stuur bericht"
   students:
       student_form:
-        paragraph1: "Fill in this application for a free trial lesson!"
-        placeholder1: "Parent First Name"
-        placeholder2: "Parent Last Name"
-        placeholder3: "Phone Number"
+        paragraph1: "Registreer hier voor een gratis en vrijblijvend proefles!"
+        placeholder1: "Voornaam (ouder)"
+        placeholder2: "Achternaam (ouder)"
+        placeholder3: "Telefoonnummer"
         placeholder4: "Email"
-        placeholder5: "Address"
-        placeholder6: "Zip code"
-        placeholder7: "Preferred language of instruction (English, Dutch, German etc.)"
-        placeholder8: "Please indicate whether you would like lessons at your home, or at the teacher's location"
-        placeholder9: "Times available (list as many as possible)"
-        link1: "Add Child"
-        placeholder10: "Notes"
-        label1: "How did you hear about us?"
+        placeholder5: "Adres"
+        placeholder6: "Postcode"
+        placeholder7: "Gewenst talen voor onderwijs (Engels, Nederlands, Duits etc.)"
+        placeholder8: "Wilt u lessen aan huis, of aan locatie van de docent?"
+        placeholder9: "Beschikbaar dagen/tijden (geef zoveel mogelijk)"
+        link1: "Kind toevoegen"
+        placeholder10: "Notities"
+        label1: "Hoe heeft u ons gevonden?"
 
         collection1: "Google search"
-        collection2: "Word-of-mouth referral"
+        collection2: "Van een van ons leerlingen"
         collection3: "Poster / flyer"
-        collection4: "Competition, masterclass, or other activity"
+        collection4: "Concours, masterclass, of andere activiteit"
         collection5: "Other"
 
-        button1: "Send Application"
+        button1: "Formulier sturen"
