--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@
 en:
   language: "English"
   shared:
-      navbar:
+      navbar_links:
         nav-item1: "About"
         nav-item2: "Policy and Prices"
         nav-item3: "Calendar"
