--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -63,7 +63,7 @@ nl:
       policy:
         header: "Prijzen en Voorwaarden - Piano Lessen"
         paragraph: "Het document met voorwaarden bevat informatie over prijzen en andere belangrijke voorwaarden. Voor verdere vragen of bijzonder situaties neem contact met ons op."
-        link: "Prijzen en Voorwarden 2019 - 2020"
+        link: "Prijzen en Voorwaarden 2019 - 2020"
       calendar:
         header: "Agenda en Vakanties"
         paragraph: "Onze agenda geeft aan wat de lesweken zijn gedurende het jaar. Lees onze voorwaarden voor meer informatie over annulering en inhalen van lessen."
