more dutch changes

--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -66,14 +66,14 @@ nl:
         link: "Prijzen en Voorwaarden 2019 - 2020"
       calendar:
         header: "Agenda en Vakanties"
-        paragraph: "Onze agenda geeft aan wat de lesweken zijn gedurende het jaar. Lees onze voorwaarden voor meer informatie over annulering en inhalen van lessen."
+        paragraph: "Onze agenda geeft aan wat de lesweken zijn gedurende het jaar. Lees onze voorwaarden voor meer informatie over annulering en het inhalen van lessen."
         link: "Wright Piano School Agenda en Vakanties - 2019-2020"
       contact:
         header1: "Contact"
         header2: "Locaties/regio's:"
       videos:
         header: "Filmpjes van onze leerlingen"
-        paragraph1: "Nathan speelt Liszt Piano Concerto Nr. 1 met Noord Nederlands Orkest"
+        paragraph1: "Nathan speelt Liszt Piano Concerto Nr. 1 met het Noord Nederlands Orkest"
         paragraph2: "Twee leerlingen spelen hun eigen geimproviseerde Coldplay mashup!"
         paragraph3: "Nathan speelt Chopin-Godowsky Etude voor de linker hand alleen in Hamburg"
         paragraph4: "Annie Li (7) speelt in de Nieuwe Kerk (Den Haag)"
