--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -80,7 +80,7 @@ en:
   teachers:
       index:
         header: "Piano Teachers"
-        paragraph: "Please click on a teacher to display their full information!"
+        paragraph: "Wright Piano School is committed to recruiting the best teachers in our areas of operation. We look for teachers that are not only musically excellent, but also have the ability to inspire the students and deliver real progress. Our teachers have higher degrees in music, and in some cases, also in educational psychology, pedagogy, or other teaching-related disciplines. Because of the diversity of the team, we are able to meet the needs of each unique student. The team is led and selected by Dr. Andrew Wright. Please click below to read more."
       show:
         button1: "Sign up for a free trial lesson!"
         button2: "Contact"
