--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -80,7 +80,7 @@ nl:
   teachers:
       index:
         header: "Piano Docenten"
-        paragraph: "Click op een docent voor meer informatie"
+        paragraph: "Onze docenten behoren tot de beste in ons gebied. Ze zijn geselecteerd door Andrew Wright."
       show:
         button1: "Registreer voor een gratis proefles!"
         button2: "Contact"
