update legal information

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -59,7 +59,7 @@ en:
         paragraph7: "BTW: NL500119338B01"
 
         header3: "Legal Structure"
-        paragraph8: "Wright Piano School is registered with the Kamer van Koophandel as an \"eenmanszaak\" under the name Andrew Wright. As such, the Wright Piano School refers students to its carefully-selected teachers, who work as independent freelancers. These teachers are legally responsible for their own actions. Wright Piano School performs all administrative functions with the students, including placement, billing, collection, organisation of activities, and periodic assessment."
+        paragraph8: "Wright Piano School B.V. is registered with the Kamer van Koophandel under number 76274691. As such, the Wright Piano School refers students to its carefully-selected teachers, who work as independent freelancers. These teachers are legally responsible for their own actions. Wright Piano School performs all administrative functions with the students, including placement, billing, collection, organisation of activities, and periodic assessment."
       policy:
         header: "Studio Policy - Piano Lessons"
         paragraph: "Please examine the studio policy carefully. It includes prices, information about cancellations and make-up lessons, and many other details. Feel free to call us and ask if you have any questions!"
