--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -59,7 +59,7 @@ nl:
         paragraph7: "BTW: NL500119338B01"
 
         header3: "Structuur"
-        paragraph8: "Wright Piano School is geregistreerd met de Kamer van Koophandel onder naam Andrew Wright. Docenten zijn freelance en verantwoordelijk voor zijn eigen lespraktijken. Alle administratieve verplichtingen zoals factureren worden gedaan door Wright Piano School."
+        paragraph8: "Wright Piano School B.V. is geregistreerd met de Kamer van Koophandel nummer 76274691. Docenten zijn freelance en verantwoordelijk voor zijn eigen lespraktijken. Alle administratieve verplichtingen zoals factureren worden gedaan door Wright Piano School."
       policy:
         header: "Prijzen en Voorwaarden - Piano Lessen"
         paragraph: "Het document met voorwaarden bevat informatie over prijzen en andere belangrijke voorwaarden. Voor verdere vragen of bijzonder situaties neem contact met ons op."
