--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -53,7 +53,7 @@ nl:
         paragraph3_2: "voor meer informatie."
 
         header2: "Zakelijk Informatie"
-        paragraph4: "Adres: Pasteurstraat 340, 2522RX Den Haag"
+        paragraph4: "Adres: Muzenplein 42, 2511GC (geen bezoekadres)"
         paragraph5: "Telefoon: +31639591941"
         paragraph6: "KvK: 37157300 Andrew Wright"
         paragraph7: "BTW: NL500119338B01"
