--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,7 +53,7 @@ en:
         paragraph3_2: "for more information."
 
         header2: "Business Information"
-        paragraph4: "Address: Pasteurstraat 340, 2522RX Den Haag"
+        paragraph4: "Address: Muzenplein 42, 2511GC Den Haag (not open for visitors)"
         paragraph5: "Phone: +31639591941"
         paragraph6: "KvK: 37157300 Andrew Wright"
         paragraph7: "BTW: NL500119338B01"
